--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -34,7 +34,7 @@ jobs:
 
                 sed -i 's|image: saatvik10/k8s-e2e:*|image: saatvik10/k8s-e2e:${{ github.sha }}|' manifest.yml
 
-                git config user.name "Github Actions Bot
+                git config user.name "Github Actions Bot"
                 git config user.email "actions@github.com"
                 git add .
                 git commit -m "updated k8s server image tags to ${{ github.sha }}"
